ínclude heat map

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 								<a class="mu-google-btn" href="#"><i class="fa fa-android"></i><span>google play</span></a>
 								<!-- <a class="mu-windows-btn" href="#"><i class="fa fa-windows"></i><span>windows store</span></a> -->
 							</div>
+							<div w3-include-html="states_heat_map.html"></div> 
 
 						</div>
 					</div>
