--- a/index.html
+++ b/index.html
@@ -1,108 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Apex App : Home</title>
-    <!-- Favicon -->
-    <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
-    <!-- Font Awesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Bootstrap -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Slick slider -->
-    <link href="assets/css/slick.css" rel="stylesheet">
-    <!-- Theme color -->
-    <link id="switcher" href="assets/css/theme-color/default-theme.css" rel="stylesheet">
-
-
-    <!-- Main Style -->
-    <link href="style.css" rel="stylesheet">
-
-    <!-- Fonts -->
-
-    <!-- Open Sans for body and title font -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,400i,600,700,800" rel="stylesheet">
- 
-	
-	
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+		Gun Violence America
   </head>
-  <body>
-
-  
-  	
-  	<!-- Start Header -->
-	<header id="mu-header" class="" role="banner">
-		<div class="mu-header-overlay">
-			<div class="container">
-				<div class="mu-header-area">
-
-					<!-- Start Logo -->
-					<div class="mu-logo-area">
-						<!-- text based logo -->
-						<a class="mu-logo" href="#">Apex App</a>
-						<!-- image based logo -->
-						<!-- <a class="mu-logo" href="#"><img src="assets/images/logo.png" alt="logo img"></a> -->
-					</div>
-					<!-- End Logo -->
-
-					<!-- Start header featured area -->
-					<div class="mu-header-featured-area">
-						<div class="mu-header-featured-img">
-							<img src="assets/images/iphone.png" alt="iphone image">
-						</div>
-
-						<div class="mu-header-featured-content">
-							<h1>Welcome To <span>Apex App</span></h1>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto nisi, consectetur odit voluptate labore veniam, neque iure cumque aut recusandae iusto. Aliquid quos vel optio dolore consequuntur accusantium autem quaerat!</p>
-
-							<div class="mu-app-download-area">
-								<h4>Download The App</h4>
-								<a class="mu-apple-btn" href="#"><i class="fa fa-apple"></i><span>apple store</span></a>
-								<a class="mu-google-btn" href="#"><i class="fa fa-android"></i><span>google play</span></a>
-								<!-- <a class="mu-windows-btn" href="#"><i class="fa fa-windows"></i><span>windows store</span></a> -->
-							</div>
-
-						</div>
-					</div>
-					<!-- End header featured area -->
-
-				</div>
-			</div>
-		</div>
-	</header>
-	<!-- End Header -->
-
-	<!-- Start Menu -->
-	<button class="mu-menu-btn">
-		<i class="fa fa-bars"></i>
-	</button>
-	<div class="mu-menu-full-overlay">
-		<div class="mu-menu-full-overlay-inner">
-			<a class="mu-menu-close-btn" href="#"><span class="mu-line"></span></a>
-			<nav class="mu-menu" role="navigation">
-				<ul>
-					<li><a href="#mu-header">Header</a></li>
-					<li><a href="#mu-feature">App Feature</a></li>
-					<li><a href="#mu-video">Promo Video</a></li>
-					<li><a href="#mu-apps-screenshot">Apps Screenshot</a></li>
-					<li><a href="#mu-download">Download</a></li>
-					<li><a href="#mu-faq">FAQ</a></li>
-					<li><a href="#mu-contact">Get In Touch</a></li>
-				</ul>
-			</nav>
-		</div>
-	</div>
-	<!-- End Menu -->
-	
+	<body>
+		
 	<script>
 			function includeHTML() {
 				var z, i, elmnt, file, xhttp;
